[gd_scene load_steps=3 format=2]

[ext_resource path="res://black_background.jpg" type="Texture" id=1]
[ext_resource path="res://Workload.gd" type="Script" id=2]

[node name="Workload" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 312.0
margin_top = 37.0
margin_right = -312.0
margin_bottom = -38.0
rect_min_size = Vector2( 400, 525 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 400.0
margin_bottom = 525.0
rect_min_size = Vector2( 400, 525 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_top = 0.001009
anchor_bottom = 0.00481852
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkloadTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 14.0
text = "Workload Questionnaire"
align = 1

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 15 )

[node name="MentalDemand" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 37.0
margin_right = 330.0
margin_bottom = 51.0
text = "Mental Demand"

[node name="MentalSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 55.0
margin_right = 330.0
margin_bottom = 71.0
min_value = 1.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 75.0
margin_right = 330.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_right = 25.0
margin_bottom = 14.0
text = "Low"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 289.0
margin_bottom = 14.0
rect_min_size = Vector2( 260, 0 )

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 293.0
margin_right = 322.0
margin_bottom = 14.0
text = "High"
align = 2

[node name="PhysicalDemand" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 93.0
margin_right = 330.0
margin_bottom = 107.0
text = "Physical Demand"

[node name="PhysicalSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 111.0
margin_right = 330.0
margin_bottom = 127.0
min_value = 1.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 131.0
margin_right = 330.0
margin_bottom = 145.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_right = 25.0
margin_bottom = 14.0
text = "Low"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 29.0
margin_right = 289.0
margin_bottom = 14.0
rect_min_size = Vector2( 260, 0 )

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 293.0
margin_right = 322.0
margin_bottom = 14.0
text = "High"

[node name="TemporalDemand" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 149.0
margin_right = 330.0
margin_bottom = 163.0
text = "Temporal Demand"

[node name="TemporalSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 167.0
margin_right = 330.0
margin_bottom = 183.0
min_value = 1.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 187.0
margin_right = 330.0
margin_bottom = 201.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_right = 25.0
margin_bottom = 14.0
text = "Low"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 29.0
margin_right = 289.0
margin_bottom = 14.0
rect_min_size = Vector2( 260, 0 )

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
margin_left = 293.0
margin_right = 322.0
margin_bottom = 14.0
text = "High"

[node name="Performance" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 205.0
margin_right = 330.0
margin_bottom = 219.0
text = "Performance"

[node name="PerformanceSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 223.0
margin_right = 330.0
margin_bottom = 239.0
min_value = 1.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 243.0
margin_right = 330.0
margin_bottom = 257.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_right = 25.0
margin_bottom = 14.0
text = "Low"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 29.0
margin_right = 289.0
margin_bottom = 14.0
rect_min_size = Vector2( 260, 0 )

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer4"]
margin_left = 293.0
margin_right = 322.0
margin_bottom = 14.0
text = "High"

[node name="Effort" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 261.0
margin_right = 330.0
margin_bottom = 275.0
text = "Effort"

[node name="EffortSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 279.0
margin_right = 330.0
margin_bottom = 295.0
min_value = 1.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 299.0
margin_right = 330.0
margin_bottom = 313.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_right = 25.0
margin_bottom = 14.0
text = "Low"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 29.0
margin_right = 289.0
margin_bottom = 14.0
rect_min_size = Vector2( 260, 0 )

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer5"]
margin_left = 293.0
margin_right = 322.0
margin_bottom = 14.0
text = "High"

[node name="Frustration" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 317.0
margin_right = 330.0
margin_bottom = 331.0
text = "Frustration"

[node name="FrustrationSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 335.0
margin_right = 330.0
margin_bottom = 351.0
min_value = 1.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxContainer6" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 355.0
margin_right = 330.0
margin_bottom = 369.0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_right = 25.0
margin_bottom = 14.0
text = "Low"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 29.0
margin_right = 289.0
margin_bottom = 14.0
rect_min_size = Vector2( 260, 0 )

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer6"]
margin_left = 293.0
margin_right = 322.0
margin_bottom = 14.0
text = "High"

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 373.0
margin_right = 330.0
margin_bottom = 398.0
rect_min_size = Vector2( 0, 25 )

[node name="Button" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 402.0
margin_right = 330.0
margin_bottom = 422.0
text = "Finish"
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/MentalSlider" to="." method="_on_MentalSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/PhysicalSlider" to="." method="_on_PhysicalSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/TemporalSlider" to="." method="_on_TemporalSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/PerformanceSlider" to="." method="_on_PerformanceSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/EffortSlider" to="." method="_on_EffortSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/FrustrationSlider" to="." method="_on_FrustrationSlider_value_changed"]
[connection signal="button_up" from="NinePatchRect/VBoxContainer/Button" to="." method="_on_Button_button_up"]
